// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`address standard contact field renders and allows you to enter values 1`] = `
<div
  class=""
>
  <div
    class=""
    style="width: 100%;"
  >
    <div
      class=""
    >
      <div
        class=""
        style="flex: 1 1 auto;"
      >
        <legend
          class=""
        >
          Home Address
        </legend>
        <div
          class=""
        >
          <div
            class=""
          >
            <label
              class="labelOnTop"
              for="address1.b5a8362f-91e7-46ff-a704-20bfb3ca6ce5"
            >
              <span
                class=""
              >
                <span
                  class=""
                >
                  * 
                </span>
                <span
                  data-cvent-id="label"
                >
                  <span>
                    Address 1
                  </span>
                </span>
              </span>
            </label>
            <div
              class=""
            >
              <div
                class=""
              >
                <input
                  class=""
                  data-cvent-id="input"
                  id="address1.b5a8362f-91e7-46ff-a704-20bfb3ca6ce5"
                  maxlength="40"
                  name="address1.b5a8362f-91e7-46ff-a704-20bfb3ca6ce5"
                  placeholder=""
                  required=""
                  style="opacity: 1;"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class=""
        >
          <div
            class=""
          >
            <label
              class="labelOnTop"
              for="address2.b5a8362f-91e7-46ff-a704-20bfb3ca6ce5"
            >
              <span
                class=""
              >
                <span
                  data-cvent-id="label"
                >
                  <span>
                    Address 2
                  </span>
                </span>
              </span>
            </label>
            <div
              class=""
            >
              <div
                class=""
              >
                <input
                  class=""
                  data-cvent-id="input"
                  id="address2.b5a8362f-91e7-46ff-a704-20bfb3ca6ce5"
                  maxlength="40"
                  name="address2.b5a8362f-91e7-46ff-a704-20bfb3ca6ce5"
                  placeholder=""
                  style="opacity: 1;"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class=""
        >
          <div
            class=""
          >
            <label
              class="labelOnTop"
              for="address3.b5a8362f-91e7-46ff-a704-20bfb3ca6ce5"
            >
              <span
                class=""
              >
                <span
                  data-cvent-id="label"
                >
                  <span>
                    Address 3
                  </span>
                </span>
              </span>
            </label>
            <div
              class=""
            >
              <div
                class=""
              >
                <input
                  class=""
                  data-cvent-id="input"
                  id="address3.b5a8362f-91e7-46ff-a704-20bfb3ca6ce5"
                  maxlength="40"
                  name="address3.b5a8362f-91e7-46ff-a704-20bfb3ca6ce5"
                  placeholder=""
                  style="opacity: 1;"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class=""
        >
          <div
            class=""
          >
            <div
              class=""
            >
              <label
                class="labelOnTop"
                for="countryCode.b5a8362f-91e7-46ff-a704-20bfb3ca6ce5"
              >
                <span
                  class=""
                >
                  <span
                    class=""
                  >
                    * 
                  </span>
                  <span
                    data-cvent-id="label"
                  >
                    <span>
                      Country
                    </span>
                  </span>
                </span>
              </label>
              <div
                class=""
              >
                <select
                  class=""
                  data-cvent-id="input"
                  id="countryCode.b5a8362f-91e7-46ff-a704-20bfb3ca6ce5"
                  name="countryCode.b5a8362f-91e7-46ff-a704-20bfb3ca6ce5"
                  required=""
                  style="opacity: 1; width: 100%;"
                >
                  <option
                    data-cvent-id="option-0"
                    value="0"
                  />
                  <option
                    data-cvent-id="option-1"
                    value="1"
                  >
                    us_name_resx
                  </option>
                  <option
                    data-cvent-id="option-2"
                    value="2"
                  >
                    wales_name_resx
                  </option>
                </select>
              </div>
            </div>
          </div>
        </div>
        <div
          class=""
        >
          <div
            class=""
          >
            <div
              class=""
            >
              <div
                class=""
              >
                <label
                  class="labelOnTop"
                  for="city.b5a8362f-91e7-46ff-a704-20bfb3ca6ce5"
                >
                  <span
                    class=""
                  >
                    <span
                      class=""
                    >
                      * 
                    </span>
                    <span
                      data-cvent-id="label"
                    >
                      <span>
                        City
                      </span>
                    </span>
                  </span>
                </label>
                <div
                  class=""
                >
                  <div
                    class=""
                  >
                    <input
                      class=""
                      data-cvent-id="input"
                      id="city.b5a8362f-91e7-46ff-a704-20bfb3ca6ce5"
                      maxlength="40"
                      name="city.b5a8362f-91e7-46ff-a704-20bfb3ca6ce5"
                      placeholder=""
                      required=""
                      style="opacity: 1;"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class=""
            >
              <div
                class=""
              >
                <label
                  class="labelOnTop"
                  for="stateCode.b5a8362f-91e7-46ff-a704-20bfb3ca6ce5"
                >
                  <span
                    class=""
                  >
                    <span
                      class=""
                    >
                      * 
                    </span>
                    <span
                      data-cvent-id="label"
                    >
                      <span>
                        State
                      </span>
                    </span>
                  </span>
                </label>
                <div
                  class=""
                >
                  <select
                    class=""
                    data-cvent-id="input"
                    id="stateCode.b5a8362f-91e7-46ff-a704-20bfb3ca6ce5"
                    name="stateCode.b5a8362f-91e7-46ff-a704-20bfb3ca6ce5"
                    required=""
                    style="opacity: 1; width: 100%;"
                  >
                    <option
                      data-cvent-id="option-0"
                      value="0"
                    />
                    <option
                      data-cvent-id="option-1"
                      value="1"
                    />
                  </select>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class=""
        >
          <div
            class=""
          >
            <div
              class=""
            >
              <label
                class="labelOnTop"
                for="postalCode.b5a8362f-91e7-46ff-a704-20bfb3ca6ce5"
              >
                <span
                  class=""
                >
                  <span
                    class=""
                  >
                    * 
                  </span>
                  <span
                    data-cvent-id="label"
                  >
                    <span>
                      Zip
                    </span>
                  </span>
                </span>
              </label>
              <div
                class=""
              >
                <div
                  class=""
                >
                  <input
                    class=""
                    data-cvent-id="input"
                    id="postalCode.b5a8362f-91e7-46ff-a704-20bfb3ca6ce5"
                    maxlength="25"
                    name="postalCode.b5a8362f-91e7-46ff-a704-20bfb3ca6ce5"
                    placeholder=""
                    required=""
                    style="opacity: 1;"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`address standard contact field renders and allows you to enter values 2`] = `
Object {
  "personalInformation": Object {
    "homeAddress": Object {
      "country": "US",
      "countryCode": "US",
    },
  },
}
`;

exports[`address standard contact field renders and allows you to enter values 3`] = `
<div
  class=""
>
  <div
    class=""
    style="width: 100%;"
  >
    <div
      class=""
    >
      <div
        class=""
        style="flex: 1 1 auto;"
      >
        <legend
          class=""
        >
          Home Address
        </legend>
        <div
          class=""
        >
          <div
            class=""
          >
            <label
              class="labelOnTop"
              for="address1.b5a8362f-91e7-46ff-a704-20bfb3ca6ce5"
            >
              <span
                class=""
              >
                <span
                  class=""
                >
                  * 
                </span>
                <span
                  data-cvent-id="label"
                >
                  <span>
                    Address 1
                  </span>
                </span>
              </span>
            </label>
            <div
              class=""
            >
              <div
                class=""
              >
                <input
                  class=""
                  data-cvent-id="input"
                  id="address1.b5a8362f-91e7-46ff-a704-20bfb3ca6ce5"
                  maxlength="40"
                  name="address1.b5a8362f-91e7-46ff-a704-20bfb3ca6ce5"
                  placeholder=""
                  required=""
                  style="opacity: 1;"
                  type="text"
                  value="address 1 answer"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class=""
        >
          <div
            class=""
          >
            <label
              class="labelOnTop"
              for="address2.b5a8362f-91e7-46ff-a704-20bfb3ca6ce5"
            >
              <span
                class=""
              >
                <span
                  data-cvent-id="label"
                >
                  <span>
                    Address 2
                  </span>
                </span>
              </span>
            </label>
            <div
              class=""
            >
              <div
                class=""
              >
                <input
                  class=""
                  data-cvent-id="input"
                  id="address2.b5a8362f-91e7-46ff-a704-20bfb3ca6ce5"
                  maxlength="40"
                  name="address2.b5a8362f-91e7-46ff-a704-20bfb3ca6ce5"
                  placeholder=""
                  style="opacity: 1;"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class=""
        >
          <div
            class=""
          >
            <label
              class="labelOnTop"
              for="address3.b5a8362f-91e7-46ff-a704-20bfb3ca6ce5"
            >
              <span
                class=""
              >
                <span
                  data-cvent-id="label"
                >
                  <span>
                    Address 3
                  </span>
                </span>
              </span>
            </label>
            <div
              class=""
            >
              <div
                class=""
              >
                <input
                  class=""
                  data-cvent-id="input"
                  id="address3.b5a8362f-91e7-46ff-a704-20bfb3ca6ce5"
                  maxlength="40"
                  name="address3.b5a8362f-91e7-46ff-a704-20bfb3ca6ce5"
                  placeholder=""
                  style="opacity: 1;"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class=""
        >
          <div
            class=""
          >
            <div
              class=""
            >
              <label
                class="labelOnTop"
                for="countryCode.b5a8362f-91e7-46ff-a704-20bfb3ca6ce5"
              >
                <span
                  class=""
                >
                  <span
                    class=""
                  >
                    * 
                  </span>
                  <span
                    data-cvent-id="label"
                  >
                    <span>
                      Country
                    </span>
                  </span>
                </span>
              </label>
              <div
                class=""
              >
                <select
                  class=""
                  data-cvent-id="input"
                  id="countryCode.b5a8362f-91e7-46ff-a704-20bfb3ca6ce5"
                  name="countryCode.b5a8362f-91e7-46ff-a704-20bfb3ca6ce5"
                  required=""
                  style="opacity: 1; width: 100%;"
                >
                  <option
                    data-cvent-id="option-0"
                    value="0"
                  />
                  <option
                    data-cvent-id="option-1"
                    value="1"
                  >
                    us_name_resx
                  </option>
                  <option
                    data-cvent-id="option-2"
                    value="2"
                  >
                    wales_name_resx
                  </option>
                </select>
              </div>
            </div>
          </div>
        </div>
        <div
          class=""
        >
          <div
            class=""
          >
            <div
              class=""
            >
              <div
                class=""
              >
                <label
                  class="labelOnTop"
                  for="city.b5a8362f-91e7-46ff-a704-20bfb3ca6ce5"
                >
                  <span
                    class=""
                  >
                    <span
                      class=""
                    >
                      * 
                    </span>
                    <span
                      data-cvent-id="label"
                    >
                      <span>
                        City
                      </span>
                    </span>
                  </span>
                </label>
                <div
                  class=""
                >
                  <div
                    class=""
                  >
                    <input
                      class=""
                      data-cvent-id="input"
                      id="city.b5a8362f-91e7-46ff-a704-20bfb3ca6ce5"
                      maxlength="40"
                      name="city.b5a8362f-91e7-46ff-a704-20bfb3ca6ce5"
                      placeholder=""
                      required=""
                      style="opacity: 1;"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class=""
            >
              <div
                class=""
              >
                <label
                  class="labelOnTop"
                  for="stateCode.b5a8362f-91e7-46ff-a704-20bfb3ca6ce5"
                >
                  <span
                    class=""
                  >
                    <span
                      class=""
                    >
                      * 
                    </span>
                    <span
                      data-cvent-id="label"
                    >
                      <span>
                        State
                      </span>
                    </span>
                  </span>
                </label>
                <div
                  class=""
                >
                  <select
                    class=""
                    data-cvent-id="input"
                    id="stateCode.b5a8362f-91e7-46ff-a704-20bfb3ca6ce5"
                    name="stateCode.b5a8362f-91e7-46ff-a704-20bfb3ca6ce5"
                    required=""
                    style="opacity: 1; width: 100%;"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class=""
        >
          <div
            class=""
          >
            <div
              class=""
            >
              <label
                class="labelOnTop"
                for="postalCode.b5a8362f-91e7-46ff-a704-20bfb3ca6ce5"
              >
                <span
                  class=""
                >
                  <span
                    class=""
                  >
                    * 
                  </span>
                  <span
                    data-cvent-id="label"
                  >
                    <span>
                      Zip
                    </span>
                  </span>
                </span>
              </label>
              <div
                class=""
              >
                <div
                  class=""
                >
                  <input
                    class=""
                    data-cvent-id="input"
                    id="postalCode.b5a8362f-91e7-46ff-a704-20bfb3ca6ce5"
                    maxlength="25"
                    name="postalCode.b5a8362f-91e7-46ff-a704-20bfb3ca6ce5"
                    placeholder=""
                    required=""
                    style="opacity: 1;"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`address standard contact field renders and allows you to enter values 4`] = `
Object {
  "personalInformation": Object {
    "homeAddress": Object {
      "address1": "address 1 answer",
      "country": "Wales",
      "countryCode": "GB3",
      "state": "",
      "stateCode": "",
    },
  },
}
`;
